--- a/Homework 2_$tm2761.ipynb
+++ b/Homework 2_$tm2761.ipynb
@@ -30,8 +30,7 @@
    "metadata": {},
    "source": [
     "<h1>Problem Statement:</h1>\n",
-    "Target observed that most shoppers don't buy everything from the same store. They visit Target only when they need certain items. 
-     During some brief periods in a person's life like pregnancy, old routines fall apart.  Our main question is , <font color='red'>how do we figure out if a customer is pregnant, even if she didn't want us to know that. </font>\n",
+    "Target observed that most shoppers don't buy everything from the same store. They visit Target only when they need certain items. During some brief periods in a person's life like pregnancy, old routines fall apart.  Our main question is , <font color='red'>how do we figure out if a customer is pregnant, even if she didn't want us to know that. </font>\n",
     "\n",
     "<h2>Supervised Data Mining:</h2><p>\n",
     "<font color='red'> Target Variable: </font><font color='blue'>Identify pregnant customers without them revealing this information. This is the dependent varialble in statistics.</font><p>\n",
