--- a/Homework 2_$tm2761.ipynb
+++ b/Homework 2_$tm2761.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Introduction to Data Science\n",
-    "## Homework 2"
+    
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "### Part 1: Case study\n",
-    "- Read [this article](http://www.nytimes.com/2012/02/19/magazine/shopping-habits.html) in the New York Times.\n",
+    "- Reading [this article](http://www.nytimes.com/2012/02/19/magazine/shopping-habits.html) in the New York Times.\n",
     "- Use what we've learned in class and from the book to describe how one could set Target's problem up as a predictive modeling problem, such that they could have gotten the results that they did.  Formulate your solution as a proposed plan using our data science terminology.  Include all the aspects of the formulation that you see as relevant to solving the problem.  Be precise but concise."
    ]
   },
